AArch64 build failure after JDK-8230505

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 14
    • Affects Version/s: 14
    • Component/s: hotspot
    • None
    • b16

      /home/shade/jdk-jdk/src/hotspot/cpu/aarch64/c1_LIRAssembler_aarch64.cpp: In member function 'void LIR_Assembler::reg2reg(LIR_Opr, LIR_Opr)':
      /home/shade/jdk-jdk/src/hotspot/cpu/aarch64/c1_LIRAssembler_aarch64.cpp:731:40: error: expected ')' before '{' token
           if (is_reference_type(src->type()) {
                                              ^

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: