8231375: AArch64 build failure after JDK-8230505

Reviewed-by: dcubed